# C-Voxel-Game-Engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
assets/: simple.frag  simple.vert
src/: Camera.cpp  auto_release.h  buffer.cpp  buffer.h  buffer_writer.h  camera.cpp  camera.h  color.h  entity.cpp  entity.h  error.h  event.h  exception.cpp  exception.h  key.h  key_event.cpp  key_event.h  log.h  material.cpp  material.h  matrix4.cpp  matrix4.h  mesh.cpp  mesh.h  mouse_event.cpp  mouse_event.h  opengl.h  renderer.cpp  renderer.h  resource_loader.cpp  resource_loader.h  sample.cpp  sampler.h  scene.h  shader.cpp  shader.h  stop_event.h  texture.cpp  texture.h  vector3.h  (+3 more)
